# SmartJobReview

./: .gitignore  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
.husky/: pre-commit
apps/backend/: .pre-commit-config.yaml  README.md  behave.ini  package.json  pyproject.toml
apps/backend/.husky/: pre-commit
apps/backend/src/alembic/: env.py
apps/backend/src/app/: __init__.py  main.py
apps/backend/src/app/core/: config.py
apps/backend/src/app/infrastructure/db/: base.py  session.py
apps/backend/src/app/infrastructure/db/models/: base_orm.py  user_orm.py
apps/backend/src/app/interfaces/http/controllers/users/: users.py
apps/backend/src/app/interfaces/schemas/: user.py
apps/front/: eslint.config.js  index.html  package.json  pnpm-lock.yaml
apps/front/components/ui/: button.tsx
apps/front/src/: App.tsx
apps/front/src/features/job/components/: JobDescription.tsx  JobDetails.tsx  JobInformation.tsx  JobListingsSidebar.tsx  JobLoadPdf.tsx  JobSearchBar.tsx  SearchBar.tsx
apps/front/src/features/job/components/ListingsSidebar/: JobListingsSidebar.tsx
apps/front/src/shared/hooks/: useNavigation.tsx
apps/front/src/shared/ui/: badge.tsx  button.tsx  card.tsx  select.tsx
