[project]
name = "smartjobreview"
version = "0.1.0"
description = "Smart Job Review API"
authors = [{name = "Carlos V", email = "francysvans@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]==0.116.1",
    "langchain==0.3.27",
    "pylint==3.3.8",
    "uvicorn==0.35.0",
    "pydantic==2.11.7",
    "alembic>=1.16.5",
    "pydantic-settings>=2.10.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "behave>=1.3.2",
    "black>=25.1.0",
    "pre-commit>=4.3.0",
    "ruff>=0.12.10",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E203"] 
exclude = [
    ".git",
    "__pycache__",
    "venv",
    "migrations",
    "build",
    "dist"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
